Added location services

--- a/WeatherAppV2/Info.plist
+++ b/WeatherAppV2/Info.plist
@@ -41,6 +41,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationUsageDescription</key>
+	<string>Please Allow</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Please Allow</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
